
  .. code-block::

    class TestIsNotASelftestActionsComponent:

        @pytest.mark.parametrize("circuits_app", [{"IS_SELFTEST": False}], indirect=True)
        def test_is_this_a_selftest_action_component(self, circuits_app):
         assert helpers.is_this_a_selftest(circuits_app.app.action_component) is False


2022-05: version 45.0
* No major changes. Just bumping build number to coincide with other builds.

2021-03: version 40.1
* No major changes. Just bumping build number to coincide with other builds

2020-09-21 version 39.0

* added mock for patch

2019-10-07: version 34.0.194

* Fixed the namespace issue causing the plugin to be unusable with latest pytest.


2019-08-02: version 33.0.189

* Added support for API key and API key secret, now able to authenticate
  using API keys instead of email/password
* New functions added to resilient-lib
    'get_file_attachment_metadata()'
    'write_to_tmp_file()'
* Updated 'validate_fields()' function in resilient-lib,
  adding the ability to validate fields in app.config
* Other minor bug fixes.



2019-07-03: version 32.0.186

*  Added more flexible 'execute_call_v2()' method in resilient-lib
*  Fix for deprecated log warnings
*  Other minor bug fixes


2019-04-12: version 32.0.140

*  Fix for exposed Resilient passwords in resilient-circuits log when run in DEBUG mode
*  'codegen' creates setup.py files which will programmatically compute function component entry points
*  Added WorkflowStatus class
*  Running 'codegen', 'codegen --reload', and 'extract' now automatically creates export files in Resilient to run against. Manually export no longer needed
*  'extract' will now extract all data associated with playbooks including Tasks, Scripts, and custom Artifact Types
*  Support for activemq hosted externally (ISC)
*  Improvements to 'resilient-lib'
*  Other minor bug fixes/improvements


2019-03-06: version 32.0.126

Removed selftest from function template
Improvements to resilient-lib

