@@ -7,4 +7,4 @@ sonar.python.coverage.reportPaths={{PATH_COV_SAVE_LOC}}/cov*.xml
 
 # --- optional properties ---
 sonar.scm.provider=git
-sonar.sources=resilient/resilient, resilient-lib/resilient_lib, resilient-circuits/resilient_circuits, resilient-sdk/resilient_sdk, pytest-resilient-circuits/pytest_resilient_circuits
+sonar.sources=resilient/resilient, resilient-lib/resilient_lib, resilient-circuits/resilient_circuits, resilient-sdk/resilient_sdk#, pytest-resilient-circuits/pytest_resilient_circuits
